--- a/Style/blog.css
+++ b/Style/blog.css
@@ -1,5 +1,5 @@
 *{margin: 5px;
-padding:  0;
+padding:  3px;
 }
 nav{
     display: flex;
@@ -36,15 +36,17 @@ nav li a{
 .amazone-text{
   color: rgb(250, 7, 7);
   
+position: absolute;
+  
     
 }
  .ama-h1{
-margin:50px 60px ;
-position: absolute;
+
 }
+
+
 .ama-p{
-position:absolute ;
-margin:90px 60px ;
+
 } 
 
 .button{
@@ -196,12 +198,6 @@ margin:90px 60px ;
     width: 100%;
 }
 
-
-
-.bonus-deal-3{
-    position: relative;
-
-}
 .bp-3{
     padding: 50px;
     background-color: rgba(248, 248, 246, 0.315);
