--- a/Style/Resposibe.css
+++ b/Style/Resposibe.css
@@ -12,11 +12,13 @@
     }
     
     .amazone-pic{
-        background-image:url("../Images/Group13.png");
+    
         height: 20vh;
         width: 40vh;
         position: relative;
     }
+
+    
 
         .button{
             padding: 0px 0px;
@@ -87,25 +89,23 @@
     }
     .bp-2{
         padding: 0px;
-        background-color: rgba(248, 248, 246, 0.315);
+        background-color:  rgba(245, 240, 240, 0.171);
         position: absolute;
         top: 30%;
         right: 50%;
     }
-    .bdi-2{
-        width: 50%;
-    }
+    
     
     .bp-3{
         padding: 0px;
-        background-color: rgb(248, 248, 246);
-        flex-direction: column;
-        position: static;
+        background-color:  rgba(245, 240, 240, 0.171);
+        position: absolute;
     }
-    .bdi-3{
-        width: 50%;
+   
+    .button1{
+        padding: 4px 4px;
+        background-color: rgb(243, 139, 4);
     }
-    
     .amazone-text{
         font-size: smaller;
     }
@@ -128,14 +128,14 @@
         margin: 0 auto;  
         padding: 10px;
     }
-    .bh1{
+    .bh1,.bh2,.bh3{
         font-size: x-small;
         margin: 0 auto;
     }
 
     .bp-1{
         padding: 50px;
-        background-color: rgba(248, 248, 246, 0.315);
+        background-color: rgba(245, 240, 240, 0.171);
         position: absolute;
         top: 0%;
         left: 50%;
